force-app/main/default/objects/SBQQ__Quote__c/fields/AllowChangeUse__c.field-meta.xml
<CustomField>
    <fullName>AllowChangeUse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consenti Cambio Uso</label>
    <type>Checkbox</type>
</CustomField>