force-app/main/default/objects/SBQQ__Quote__c/fields/BrandLogo__c.field-meta.xml
<CustomField>
    <fullName>BrandLogo__c</fullName>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>