force-app/main/default/objects/SBQQ__Quote__c/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <formula>Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Campagna</label>
    <type>Text</type>
</CustomField>