force-app/main/default/objects/SBQQ__Quote__c/fields/CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason__c</fullName>
    <label>Causale di Annullamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Errata operativita</fullName>
            </value>
            <value>
                <fullName>Volonta cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>