force-app/main/default/objects/SBQQ__Quote__c/fields/CategoryTypeClient__c.field-meta.xml
<CustomField>
    <fullName>CategoryTypeClient__c</fullName>
    <formula>TEXT(SBQQ__Account__r.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo cliente/Categoria</label>
    <type>Text</type>
</CustomField>