force-app/main/default/objects/SBQQ__Quote__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Canale</label>
    <length>64</length>
    <type>Text</type>
</CustomField>