force-app/main/default/objects/SBQQ__Quote__c/fields/ClientAge__c.field-meta.xml
<CustomField>
    <fullName>ClientAge__c</fullName>
    <formula>IF((Sale__r.ClientAge__c == 0), SBQQ__Account__r.Age__c,Sale__r.ClientAge__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Età Cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>