force-app/main/default/objects/SBQQ__Quote__c/fields/CommissioningCampaign__c.field-meta.xml
<CustomField>
    <fullName>CommissioningCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campagna Commissioning</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Quotes (CPQ) (Campagna Commissioning)</relationshipLabel>
    <relationshipName>Quotes_CPQ1</relationshipName>
    <type>Lookup</type>
</CustomField>