force-app/main/default/objects/SBQQ__Quote__c/fields/CompanyOwner__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwner__c</fullName>
    <formula>TEXT(SBQQ__Account__r.CompanyOwner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Owner</label>
    <type>Text</type>
</CustomField>