force-app/main/default/objects/SBQQ__Quote__c/fields/ConsumptionRangeEE__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeEE__c</fullName>
    <label>Fascia consumo EE</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>