force-app/main/default/objects/SBQQ__Quote__c/fields/ConsumptionRangeGAS__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeGAS__c</fullName>
    <label>Fascia consumo GAS</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>