force-app/main/default/objects/SBQQ__Quote__c/fields/ContractReference__c.field-meta.xml
<CustomField>
    <fullName>ContractReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>campo utilizzato per referenziareun contratto attivo durante la vendita singola di un VAS</description>
    <label>Contratto di riferimento</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Quotes (CPQ) (Contratto di riferimento)</relationshipLabel>
    <relationshipName>QuotesCPQ</relationshipName>
    <type>Lookup</type>
</CustomField>