force-app/main/default/objects/SBQQ__Quote__c/fields/ImplantType__c.field-meta.xml
<CustomField>
    <fullName>ImplantType__c</fullName>
    <label>Tipologia Impianto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>