force-app/main/default/objects/SBQQ__Quote__c/fields/IntegrationId__c.field-meta.xml
<CustomField>
    <fullName>IntegrationId__c</fullName>
    <externalId>true</externalId>
    <label>Id Integrazione SOL</label>
    <length>30</length>
    <type>Text</type>
</CustomField>