force-app/main/default/objects/SBQQ__Quote__c/fields/IsBillableVas__c.field-meta.xml
<CustomField>
    <fullName>IsBillableVas__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsBillableVas</label>
    <type>Checkbox</type>
</CustomField>