force-app/main/default/objects/SBQQ__Quote__c/fields/IsFromVasSection__c.field-meta.xml
<CustomField>
    <fullName>IsFromVasSection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From VAS Section</label>
    <type>Checkbox</type>
</CustomField>