force-app/main/default/objects/SBQQ__Quote__c/fields/isTransition__c.field-meta.xml
<CustomField>
    <fullName>isTransition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTransition</label>
    <type>Checkbox</type>
</CustomField>