force-app/main/default/objects/SBQQ__Quote__c/fields/IsVAS__c.field-meta.xml
<CustomField>
    <fullName>IsVAS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAS</label>
    <type>Checkbox</type>
</CustomField>