force-app/main/default/objects/SBQQ__Quote__c/fields/ListAmountVAT__c.field-meta.xml
<CustomField>
    <fullName>ListAmountVAT__c</fullName>
    <label>List Amount With VAT</label>
    <summarizedField>SBQQ__QuoteLine__c.ListTotalVAT__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>