force-app/main/default/objects/SBQQ__Quote__c/fields/ListPriceName__c.field-meta.xml
<CustomField>
    <fullName>ListPriceName__c</fullName>
    <formula>SBQQ__PriceBook__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Listino</label>
    <type>Text</type>
</CustomField>