force-app/main/default/objects/SBQQ__Quote__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Tipo Mercato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Libero</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>FUI</fullName>
            </value>
            <value>
                <fullName>Regolamentato</fullName>
            </value>
            <value>
                <fullName>Salvaguardia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>