force-app/main/default/objects/SBQQ__Quote__c/fields/MarketOrigin__c.field-meta.xml
<CustomField>
    <fullName>MarketOrigin__c</fullName>
    <label>Mercato Provenienza</label>
    <length>100</length>
    <type>Text</type>
</CustomField>