force-app/main/default/objects/SBQQ__Quote__c/fields/MeterType__c.field-meta.xml
<CustomField>
    <fullName>MeterType__c</fullName>
    <label>Tipo Apparecchiatura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>