force-app/main/default/objects/SBQQ__Quote__c/fields/NewClient__c.field-meta.xml
<CustomField>
    <fullName>NewClient__c</fullName>
    <label>Nuovo Cliente</label>
    <length>1</length>
    <type>Text</type>
</CustomField>