force-app/main/default/objects/SBQQ__Quote__c/fields/PowerFlow__c.field-meta.xml
<CustomField>
    <fullName>PowerFlow__c</fullName>
    <label>Potenza/Portata</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>