force-app/main/default/objects/SBQQ__Quote__c/fields/PriceListVASStandalone__c.field-meta.xml
<CustomField>
    <fullName>PriceListVASStandalone__c</fullName>
    <formula>IF(CONTAINS(ListPriceName__c, &quot;VAS Standalone&quot;),&quot;Y&quot;, &quot;N&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ListiniPrezziVasStandalone</label>
    <type>Text</type>
</CustomField>