force-app/main/default/objects/SBQQ__Quote__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profilo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>