force-app/main/default/objects/SBQQ__Quote__c/fields/ResidentDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>ResidentDeliveryAddress__c</fullName>
    <label>Residente all&apos;indirizzo di fornitura</label>
    <length>1</length>
    <type>Text</type>
</CustomField>