force-app/main/default/objects/SBQQ__Quote__c/fields/Sale__c.field-meta.xml
<CustomField>
    <fullName>Sale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendita</label>
    <referenceTo>Sale__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>