force-app/main/default/objects/SBQQ__Quote__c/fields/SaleBy__c.field-meta.xml
<CustomField>
    <fullName>SaleBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>