force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__Status__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Status__c</fullName>
    <description>Status indicating where quote is in its lifecycle.</description>
    <inlineHelpText>Status indicating where quote is in its lifecycle.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
                <label>In Lavorazione</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Rifiutata</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>Annullata</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <label>Accettata</label>
            </value>
            <value>
                <fullName>Chiusa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>