force-app/main/default/objects/SBQQ__Quote__c/fields/SuperUser__c.field-meta.xml
<CustomField>
    <fullName>SuperUser__c</fullName>
    <label>Super Utente</label>
    <length>1</length>
    <type>Text</type>
</CustomField>