force-app/main/default/objects/SBQQ__Quote__c/fields/SupplyCity__c.field-meta.xml
<CustomField>
    <fullName>SupplyCity__c</fullName>
    <label>Comune Fornitura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>