force-app/main/default/objects/SBQQ__Quote__c/fields/SupplyProvince__c.field-meta.xml
<CustomField>
    <fullName>SupplyProvince__c</fullName>
    <label>Provincia Fornitura</label>
    <length>55</length>
    <type>Text</type>
</CustomField>