force-app/main/default/objects/SBQQ__Quote__c/fields/TotalDiscountAmountVAT__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountAmountVAT__c</fullName>
    <label>Total Discount Amount with VAT</label>
    <summarizedField>SBQQ__QuoteLine__c.TotalDiscountAmountVAT__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>