force-app/main/default/objects/SBQQ__Quote__c/fields/UseCategory__c.field-meta.xml
<CustomField>
    <fullName>UseCategory__c</fullName>
    <label>Categoria uso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>