force-app/main/default/objects/SBQQ__Quote__c/fields/VasCommodity__c.field-meta.xml
<CustomField>
    <fullName>VasCommodity__c</fullName>
    <description>Campo Tecnico per scrivere la commodity sugli ordini vas creati da contratti non migrati</description>
    <label>Commodity VAS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>