force-app/main/default/objects/SBQQ__Quote__c/fields/VasSupplyAddress__c.field-meta.xml
<CustomField>
    <fullName>VasSupplyAddress__c</fullName>
    <description>Campo Tecnico per ribaltare l&apos;indirizzo sul Vas generato da contratto non migrato</description>
    <label>Indirizzo VAS [Fornitura]</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>