force-app/main/default/objects/SBQQ__Quote__c/fields/VendorLastName__c.field-meta.xml
<CustomField>
    <fullName>VendorLastName__c</fullName>
    <label>Cognome Venditore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>